// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows for querying with the typename 1`] = `
Object {
  "__typename": "User",
  "id": "user_id",
  Symbol(id): "User:user_id",
}
`;

exports[`errors if the query in the mock and component do not match 1`] = `
[Error: Network error: No more mocked responses for the query: query GetUser($username: String!) {
  user(username: $username) {
    id
    __typename
  }
}
, variables: {"username":"mock_username"}]
`;

exports[`errors if the variables in the mock and component do not match 1`] = `
[Error: Network error: No more mocked responses for the query: query GetUser($username: String!) {
  user(username: $username) {
    id
    __typename
  }
}
, variables: {"username":"other_user"}]
`;

exports[`mocks the data 1`] = `
Object {
  "__typename": "User",
  "id": "user_id",
  Symbol(id): "User:user_id",
}
`;
